# CHIP-8

./: .gitignore  README.md  TerminalGraphics.h  console.c  console.h  cpu.c  cpu.h  disassemble.c  disassemble.h  disassembler.c  glad.c  graphics.c  graphics.h  interpret.c  interpret.h  keyboard.c  keyboard.h  main.c  makefile  meson.build  ram.c  ram.h  render.c  render.h  rom.c  rom.h  run.bat  shader.c  shader.h  sprite.frag  sprite.vert  test.c  types.h  window.c  window.h
include/: console.h  types.h
src/: console.c  disassemble.c  main.c  meson.build
subprojects/: minifb.wrap
